--- a/public/EstilosHome/css/styles.css
+++ b/public/EstilosHome/css/styles.css
@@ -57,7 +57,10 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none; /* Elimina el subrayado de los enlaces */
+    color: inherit; /* Hereda el color del texto */
 }
+
 .grid-item::before {
     content: '';
     position: absolute;
@@ -77,7 +80,6 @@ main {
     box-shadow: 0px 20px 20px -15px rgb(255, 255, 255), -20px 0px 20px -15px rgb(255, 255, 255);
 }
 
-
 .grid-item:hover::before {
     opacity: 1;
 }
@@ -88,8 +90,6 @@ main {
     object-fit: cover; /* Cubre el contenedor manteniendo la proporción */
     border-radius: 10px;
 }
-
-
 
 .grid-item img {
     max-width: 100%;
