--- a/public/EstilosAdmin/css/styles.css
+++ b/public/EstilosAdmin/css/styles.css
@@ -3,7 +3,7 @@
 .card {
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    transition: box-shadow 0.3s ease;
+    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Agregamos transform para el efecto de escala */
     background-color: #f0f9eb; /* Color de fondo verde claro */
     border: 1px solid #c8e6c9; /* Borde verde más oscuro */
     text-align: center;
@@ -21,4 +21,10 @@ p {
     font-size: 1.2rem;
     color: #4CAF50; /* Color de texto verde */
     margin-bottom: 0;
+}
+
+.card:hover {
+    box-shadow: 0 12px 20px rgba(106, 255, 111, 0.952); /* Sombra verde más intensa al hacer hover */
+    transform: scale(1.03); /* Escalamos la tarjeta al hacer hover */
+    background-color: #6afa6577; /* Color de fondo ligeramente más oscuro */
 }
