--- a/public/EstilosPacientes/css/styles.css
+++ b/public/EstilosPacientes/css/styles.css
@@ -170,3 +170,54 @@ button {
 .btn-editar:hover {
   background-color: #218838; /* Color verde más oscuro al pasar el ratón */
 }
+/* Estilo para el div con scroll */
+.scrollable-table {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+/* Estilos para el cuadro de diálogo personalizado */
+#customDialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; /* Oculto por defecto */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Asegura que el diálogo esté sobre otros elementos */
+}
+
+.dialogBox {
+  background-color: #d4edda;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  max-width: 400px; /* Añade un ancho máximo */
+  width: 100%; /* Asegura que no exceda el contenedor */
+}
+
+.dialogBox p {
+  margin: 0 0 20px;
+}
+
+.dialogBox button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.dialogBox .confirmBtn {
+  background-color: #28a745;
+  color: white;
+}
+
+.dialogBox .cancelBtn {
+  background-color: #dc3545;
+  color: white;
+}
